--- a/views/productEntry/productEntry.html
+++ b/views/productEntry/productEntry.html
@@ -1,8 +1,6 @@
-
-
-
-<h4>Brand: {{inputs.brand}}</h4>
-<h4>Style: {{inputs.style}}</h4>
+<h4>Quote Name: {{quoteNameInput}}</h4>
+<h4>Brand: {{quoteBrandInput}}</h4>
+<h4>Style: {{quoteStyleInput}}</h4>
 
 <div class="input-group mb-3">
   <div class="input-group-prepend">
