--- a/views/productEntry/quoteInfo.html
+++ b/views/productEntry/quoteInfo.html
@@ -1,7 +1,10 @@
 <form>
   <div class="form-group">
-    <label for="exampleInputEmail1">Quote Name</label>
-    <input class="form-control" id="quoteNameInput" placeholder="">
+    <label for="quoteNameInput">Quote Name</label>
+    <input ng-model="quoteNameInput" class="form-control" id="quoteNameInput" placeholder="">
+
+
+
   </div>
   <div class="form-group">
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
@@ -9,7 +12,7 @@
     </button>
   </div>
 
-  <button type="submit" class="btn btn-primary"><a href="#/productEntry">Next</a></button>
+  <button ng-click="setSelection()" type="submit" class="btn btn-primary"><a href="#/productEntry">Next</a></button>
 </form>
 
 <!-- Brand Modal -->
