--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -6,8 +6,8 @@
     <a href="#">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Quote: {{quotes[$index].quoteNumber}}</h5>
-          <p class="card-text">Name: {{quotes[$index].quoteName}}</p>
+
+          <h5 class="card-text">Name: {{quotes[$index].quoteName}}</h5>
           <p class="card-text">Total: {{quotes[$index].quoteTotal}}</p>
           <p class="card-text">Style : {{quotes[$index].quoteStyle}}</p>
         </div>
@@ -18,8 +18,7 @@
     <a href="#">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Quote: {{quotes[$index+1].quoteNumber}}</h5>
-          <p class="card-text">Name: {{quotes[$index+1].quoteName}}</p>
+        <h5 class="card-text">Name: {{quotes[$index].quoteName}}</h5>
           <p class="card-text">Total: {{quotes[$index+1].quoteTotal}}</p>
           <p class="card-text">Style : {{quotes[$index+1].quoteStyle}}</p>
         </div>
@@ -30,8 +29,7 @@
     <a href="#">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Quote: {{quotes[$index+2].quoteNumber}}</h5>
-          <p class="card-text">Name: {{quotes[$index+2].quoteName}}</p>
+        <h5 class="card-text">Name: {{quotes[$index].quoteName}}</h5>
           <p class="card-text">Total: {{quotes[$index+2].quoteTotal}}</p>
           <p class="card-text">Style : {{quotes[$index+2].quoteStyle}}</p>
         </div>
@@ -43,8 +41,7 @@
     <a href="#">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Quote: {{quotes[$index+3].quoteNumber}}</h5>
-          <p class="card-text">Name: {{quotes[$index+3].quoteName}}</p>
+        <h5 class="card-text">Name: {{quotes[$index].quoteName}}</h5>
           <p class="card-text">Total: {{quotes[$index+3].quoteTotal}}</p>
           <p class="card-text">Style : {{quotes[$index+3].quoteStyle}}</p>
         </div>
