--- a/views/productEntry/productEntry.html
+++ b/views/productEntry/productEntry.html
@@ -47,3 +47,8 @@
   </tr>
 </table>
 <br>
+
+
+<div class="text-center">
+    <button type="button" class="btn btn-success" ng-click="saveQuote()">Save Quote</button>
+</div>
