--- a/views/productEntry/productEntry.html
+++ b/views/productEntry/productEntry.html
@@ -50,5 +50,6 @@
 
 
 <div class="text-center">
+    <button type="button" class="btn btn-primary" ng-click="tableToExcel()">Export Excell</button>
     <button type="button" class="btn btn-success" ng-click="saveQuote()">Save Quote</button>
 </div>
